--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "LookAuthLite",
-    "version": "0.14.5",
+    "name": "Leapp",
+    "version": "0.16.0",
     "author": {
-        "name": "beSharp",
-        "email": "info@besharp.it"
+        "name": "noovolari",
+        "email": "info@noovolari.com"
     },
     "description": "Straight programmatic access via Single Sign-on to all your AWS accounts and resources.",
     "contributors": [
@@ -47,12 +47,8 @@
         "dist-all-prod": "node scripts/changeProductName.js && rm -rf electron/dist && rm -rf release && rm -rf dist && tsc --p electron && ng build --aot --configuration production --base-href ./ && mkdir -p electron/dist/electron/assets/images && cp -a electron/assets/images/* electron/dist/electron/assets/images/ && electron-builder build -p always --mac --win --linux"
     },
     "build": {
-        "publish": {
-            "provider": "s3",
-            "bucket": "lookauth-lite.clients"
-        },
         "afterSign": "scripts/notarize.js",
-        "productName": "LookAuth Lite",
+        "productName": "Leapp",
         "icon": "src/assets/icons/icon.icns",
         "files": [
             "dist/noovolari-eddie-client/*",
@@ -69,7 +65,7 @@
             "output": "release",
             "buildResources": "dist"
         },
-        "appId": "com.lookauth.app",
+        "appId": "com.leapp.app",
         "dmg": {
             "icon": "src/assets/icons/icon.icns",
             "background": "src/assets/icons/background.png",
@@ -88,11 +84,11 @@
         },
         "linux": {
             "category": "Utility",
-            "synopsis": "LookAuth Client is a tool that allows the user to obtain secure, temporary and refreshable credentials to access AWS Services with AWS CLI and tools based on it",
-            "description": "LookAuth Client is a tool that allows the user to obtain secure, temporary and refreshable credentials to access AWS Services with AWS CLI and tools based on it, with versioning tools that work with AWS CodeCommit service and to easily use AWS SDK from your local environment during your everyday development.",
+            "synopsis": "Leapp Client is a tool that allows the user to obtain secure, temporary and refreshable credentials to access AWS Services with AWS CLI and tools based on it",
+            "description": "Leapp Client is a tool that allows the user to obtain secure, temporary and refreshable credentials to access AWS Services with AWS CLI and tools based on it, with versioning tools that work with AWS CodeCommit service and to easily use AWS SDK from your local environment during your everyday development.",
             "icon": "src/assets/icons/1024x1024.png",
             "desktop": {
-                "Icon": "/usr/share/icons/hicolor/0x0/apps/lookauthlite.png"
+                "Icon": "/usr/share/icons/hicolor/0x0/apps/leapp.png"
             },
             "target": [
                 "deb"
@@ -102,14 +98,14 @@
             "target": [
                 "nsis"
             ],
-            "icon": "src/assets/images/LookAuth.ico",
-            "legalTrademarks": "beSharp srl",
-            "publisherName": "beSharp srl",
+            "icon": "src/assets/images/Leapp.ico",
+            "legalTrademarks": "noovolari",
+            "publisherName": "noovolari",
             "requestedExecutionLevel": "highestAvailable",
             "verifyUpdateCodeSignature": false
         },
         "mac": {
-            "icon": "src/assets/images/LookAuth.icns",
+            "icon": "src/assets/images/Leapp.icns",
             "forceCodeSigning": true,
             "hardenedRuntime": true,
             "entitlements": "./build/entitlements.mac.plist",
@@ -130,65 +126,65 @@
         "@angular/platform-browser": "~8.1.0",
         "@angular/platform-browser-dynamic": "~8.1.0",
         "@angular/router": "~8.1.0",
-        "@ng-select/ng-select": "^3.0.5",
+        "@ng-select/ng-select": "^3.7.3",
         "@ngx-translate/core": "^11.0.1",
         "@ngx-translate/http-loader": "^4.0.0",
         "@sebgroup/ng-magic-iframe": "^1.0.2",
-        "@types/jest": "^25.1.4",
-        "aws-sdk": "^2.589.0",
-        "bootstrap": "^4.3.1",
+        "@types/jest": "^25.2.3",
+        "aws-sdk": "^2.713.0",
+        "bootstrap": "^4.5.0",
         "chdir": "0.0.0",
-        "copy-dir": "^1.1.0",
-        "crypto-js": "^3.1.9-1",
+        "copy-dir": "^1.3.0",
+        "crypto-js": "^3.3.0",
         "electron-log": "^3.0.6",
         "electron-notarize": "^0.1.1",
-        "electron-osx-sign": "^0.4.14",
+        "electron-osx-sign": "^0.4.17",
         "electron-reload": "^1.5.0",
-        "electron-updater": "^4.2.2",
-        "extract-zip": "^1.6.7",
+        "electron-updater": "^4.3.1",
+        "extract-zip": "^1.7.0",
         "fs-extra": "^8.1.0",
         "ini": "^1.3.5",
         "jwt-decode": "^2.2.0",
         "md5-file": "^4.0.0",
         "menubar": "^6.0.3",
-        "mousetrap": "^1.6.3",
+        "mousetrap": "^1.6.5",
         "ngx-bootstrap": "^4.2.0",
         "ngx-json-viewer": "^2.4.0",
         "ngx-toastr": "^10.0.4",
         "node-machine-id": "^1.1.12",
-        "rimraf": "^3.0.0",
+        "rimraf": "^3.0.2",
         "rxjs": "~6.4.0",
         "saml-encoder-decoder-js": "^1.0.1",
         "semver": "^6.3.0",
-        "sudo-prompt": "^9.0.0",
-        "tslib": "^1.9.0",
-        "v8-compile-cache": "^2.1.0",
+        "sudo-prompt": "^9.2.1",
+        "tslib": "^1.13.0",
+        "v8-compile-cache": "^2.1.1",
         "zlib": "^1.0.5",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.803.24",
+        "@angular-devkit/build-angular": "^0.803.28",
         "@angular/cli": "~8.1.0",
         "@angular/compiler-cli": "~8.1.0",
         "@angular/language-service": "~8.1.0",
         "@biesbjerg/ngx-translate-extract": "^2.3.4",
-        "@types/jasmine": "~3.3.8",
+        "@types/jasmine": "^3.5.11",
         "@types/jasminewd2": "~2.0.3",
-        "@types/node": "^10.17.13",
-        "codelyzer": "^5.0.0",
-        "electron": "^8.0.1",
-        "electron-builder": "^22.2.0",
+        "@types/node": "^10.17.27",
+        "codelyzer": "^5.2.2",
+        "electron": "^8.4.0",
+        "electron-builder": "^22.7.0",
         "electron-builder-squirrel-windows": "^21.1.3",
         "electron-installer-dmg": "^3.0.0",
-        "electron-packager": "^14.0.2",
+        "electron-packager": "^14.2.1",
         "jasmine-core": "~3.4.0",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "^4.4.1",
         "karma-chrome-launcher": "~2.2.0",
         "karma-coverage-istanbul-reporter": "~2.0.1",
         "karma-jasmine": "~2.0.1",
-        "karma-jasmine-html-reporter": "^1.4.0",
-        "protractor": "~5.4.0",
+        "karma-jasmine-html-reporter": "^1.5.4",
+        "protractor": "^5.4.4",
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
         "typescript": "~3.4.3"
