--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "noovolari-eddie-client": {
+    "leapp-client": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/noovolari-eddie-client",
+            "outputPath": "dist/leapp-client",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -82,21 +82,21 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "noovolari-eddie-client:build"
+            "browserTarget": "leapp-client:build"
           },
           "configurations": {
             "staging": {
-              "browserTarget": "noovolari-eddie-client:build:staging"
+              "browserTarget": "leapp-client:build:staging"
             },
             "production": {
-              "browserTarget": "noovolari-eddie-client:build:production"
+              "browserTarget": "leapp-client:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "noovolari-eddie-client:build"
+            "browserTarget": "leapp-client:build"
           }
         },
         "test": {
@@ -133,18 +133,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "noovolari-eddie-client:serve"
+            "devServerTarget": "leapp-client:serve"
           },
           "configurations": {
             "staging": {
-              "devServerTarget": "noovolari-eddie-client:serve:staging"
+              "devServerTarget": "leapp-client:serve:staging"
             },
             "production": {
-              "devServerTarget": "noovolari-eddie-client:serve:production"
+              "devServerTarget": "leapp-client:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "noovolari-eddie-client"
+  "defaultProject": "leapp-client"
 }
