--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
         "electron-updater": "^4.3.1",
         "extract-zip": "^1.7.0",
         "fs-extra": "^8.1.0",
+        "global-tunnel": "^1.2.0",
         "ini": "^1.3.5",
         "jwt-decode": "^2.2.0",
         "md5-file": "^4.0.0",
@@ -174,7 +175,7 @@
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.803.28",
+        "@angular-devkit/build-angular": "^0.803.24",
         "@angular/cli": "~8.1.0",
         "@angular/compiler-cli": "~8.1.0",
         "@angular/language-service": "~8.1.0",
