--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
         "semver": "^6.3.0",
         "sudo-prompt": "^9.2.1",
         "tslib": "^1.13.0",
+        "uuid": "^8.3.0",
         "v8-compile-cache": "^2.1.1",
         "zlib": "^1.0.5",
         "zone.js": "~0.9.1"
