--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "homepage": "https://www.noovolari.com",
     "main": "electron/dist/electron/main.js",
     "scripts": {
+        "postinstall": "electron-builder install-app-deps",
         "ng": "ng",
         "start": "ng serve",
+        "rebuild-keytar": "electron-rebuild -f -w keytar",
         "build": "rm -rf electron/dist && cp src/assets/icons/* dist/leapp-client/ && ng build --base-href ./",
         "test": "ng test",
         "lint": "ng lint",
@@ -48,12 +50,12 @@
     },
     "build": {
         "publish": [
-          {
-            "provider": "github",
-            "owner": "Noovolari",
-            "repo": "leapp",
-            "releaseType": "release"
-          }
+            {
+                "provider": "github",
+                "owner": "Noovolari",
+                "repo": "leapp",
+                "releaseType": "release"
+            }
         ],
         "afterSign": "scripts/notarize.js",
         "productName": "Leapp",
@@ -186,11 +188,12 @@
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "^10.17.27",
         "codelyzer": "^5.2.2",
-        "electron": "^8.5.2",
+        "electron": "8.5.2",
         "electron-builder": "^22.7.0",
         "electron-builder-squirrel-windows": "^21.1.3",
         "electron-installer-dmg": "^3.0.0",
         "electron-packager": "^14.2.1",
+        "electron-rebuild": "^2.0.3",
         "jasmine-core": "~3.4.0",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "^4.4.1",
