--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
         "electron-reload": "^1.5.0",
         "electron-updater": "^4.3.1",
         "extract-zip": "^1.7.0",
+        "fix-path": "^3.0.0",
         "fs-extra": "^8.1.0",
         "global-tunnel": "^1.2.0",
         "ini": "^1.3.5",
