--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
         "chdir": "0.0.0",
         "copy-dir": "^1.3.0",
         "crypto-js": "^3.3.0",
+        "electron-default-menu": "^1.0.2",
         "electron-log": "^3.0.6",
         "electron-notarize": "^0.1.1",
         "electron-osx-sign": "^0.4.17",
