Added proxy config for Electron Browser-Window and for http/https clients. http and https client should be configured in such a way that the login form does not appear if I'm already logged in Google

--- a/package.json
+++ b/package.json
@@ -165,8 +165,10 @@
         "electron-updater": "^4.3.1",
         "extract-zip": "^1.7.0",
         "fix-path": "^3.0.0",
+        "follow-redirects": "^1.13.0",
         "fs-extra": "^8.1.0",
-        "global-tunnel": "^1.2.0",
+        "http-proxy-agent": "^4.0.1",
+        "https-proxy-agent": "^5.0.0",
         "ini": "^1.3.5",
         "jwt-decode": "^2.2.0",
         "keytar": "^6.0.1",
