--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
             "email": "andrea.cavagna@noovolari.com"
         },
         {
-          "name": "Nicolò Marchesi",
-          "email": "nicolo@noovolari.com"
+            "name": "Nicolò Marchesi",
+            "email": "nicolo@noovolari.com"
         }
     ],
     "repository": "https://github.com/Noovolari/leapp",
@@ -117,7 +117,8 @@
                 "Icon": "/usr/share/icons/hicolor/0x0/apps/leapp.png"
             },
             "target": [
-                "deb", "AppImage"
+                "deb",
+                "AppImage"
             ]
         },
         "win": {
