--- a/package.json
+++ b/package.json
@@ -158,7 +158,7 @@
         "@ngx-translate/http-loader": "~4.0.0",
         "@sebgroup/ng-magic-iframe": "~1.0.2",
         "@types/jest": "~25.2.3",
-        "aws-sdk": "~2.713.0",
+        "aws-sdk": "~2.784.0",
         "bootstrap": "~4.5.0",
         "chdir": "0.0.0",
         "copy-dir": "~1.3.0",
@@ -202,6 +202,7 @@
         "@angular/compiler-cli": "~8.1.0",
         "@angular/language-service": "~8.1.0",
         "@biesbjerg/ngx-translate-extract": "~2.3.4",
+        "@types/aws-sdk": "^2.7.0",
         "@types/jasmine": "~3.5.11",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~10.17.27",
