--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
         "electron-updater": "~4.3.1",
         "extract-zip": "~1.7.0",
         "fix-path": "~3.0.0",
+        "follow-redirects": "^1.13.0",
         "fs-extra": "~8.1.0",
         "global-tunnel": "~1.2.0",
         "ini": "~1.3.5",
