--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Run npm
       run: |
-        npm build
+        npm run-script build
