--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "mousetrap": "~1.6.5",
     "ms": "^2.1.1",
     "ngx-bootstrap": "4.3.0",
+    "ngx-electron": "^2.2.0",
     "ngx-json-viewer": "~2.4.0",
     "ngx-toastr": "~10.0.4",
     "node-log-rotate": "~0.1.5",
@@ -223,15 +224,14 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/jasmine": "~3.5.11",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.17.27",
+    "@types/node": "^10.17.51",
     "codelyzer": "~5.2.2",
-    "electron": "~9.4.1",
+    "electron": "10.3.0",
     "electron-builder": "~22.9.1",
     "electron-builder-squirrel-windows": "~21.1.3",
     "electron-installer-dmg": "~3.0.0",
     "electron-packager": "~15.1.0",
     "electron-rebuild": "~2.0.3",
-    "node-abi": "^2.19.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
@@ -239,6 +239,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "~1.5.4",
+    "node-abi": "^2.19.3",
     "protractor": "~5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
