--- a/package.json
+++ b/package.json
@@ -225,6 +225,7 @@
     "@types/jasmine": "~3.5.11",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^10.17.51",
+    "@types/uuid": "^8.3.0",
     "codelyzer": "~5.2.2",
     "electron": "10.3.0",
     "electron-builder": "~22.9.1",
