--- a/package.json
+++ b/package.json
@@ -123,7 +123,8 @@
     },
     "win": {
       "target": [
-        "nsis"
+        "nsis",
+        "zip"
       ],
       "icon": "src/assets/images/Leapp.ico",
       "legalTrademarks": "beSharp",
