added test library for typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "types": ["node"],
+    "types": ["node","jasmine"],
     "typeRoots": [
       "../node_modules/@types"
     ],
