--- a/package.json
+++ b/package.json
@@ -224,7 +224,7 @@
     "@angular/language-service": "~8.1.0",
     "@biesbjerg/ngx-translate-extract": "~2.3.4",
     "@types/aws-sdk": "^2.7.0",
-    "@types/jasmine": "~3.5.11",
+    "@types/jasmine": "^3.6.10",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^10.17.51",
     "@types/uuid": "^8.3.0",
@@ -235,6 +235,7 @@
     "electron-installer-dmg": "~3.0.0",
     "electron-packager": "~15.1.0",
     "electron-rebuild": "~2.0.3",
+    "jasmine": "^3.7.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
@@ -243,9 +244,10 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "~1.5.4",
     "node-abi": "^2.19.3",
+    "nyc": "^15.1.0",
     "protractor": "~5.4.4",
-    "ts-node": "~7.0.0",
+    "ts-node": "^7.0.1",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "^3.4.5"
   }
 }
