added test library for typescript, removed errors from service removal

--- a/package.json
+++ b/package.json
@@ -241,8 +241,10 @@
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "~1.5.4",
+    "karma-requirejs": "^1.1.0",
     "node-abi": "^2.19.3",
     "nyc": "^15.1.0",
     "protractor": "~5.4.4",
