--- a/package.json
+++ b/package.json
@@ -218,8 +218,8 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.24",
-    "@angular/cli": "~8.1.0",
+    "@angular-devkit/build-angular": "^0.1102.10",
+    "@angular/cli": "^11.2.10",
     "@angular/compiler-cli": "~8.1.0",
     "@angular/language-service": "~8.1.0",
     "@biesbjerg/ngx-translate-extract": "~2.3.4",
@@ -236,7 +236,7 @@
     "electron-packager": "~15.1.0",
     "electron-rebuild": "~2.0.3",
     "jasmine": "^3.7.0",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~2.2.0",
