--- a/package.json
+++ b/package.json
@@ -157,99 +157,99 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "~9.1.13",
-    "@angular/common": "~9.1.13",
-    "@angular/compiler": "~9.1.13",
-    "@angular/core": "~9.1.13",
-    "@angular/forms": "~9.1.13",
-    "@angular/platform-browser": "~9.1.13",
-    "@angular/platform-browser-dynamic": "~9.1.13",
-    "@angular/router": "~9.1.13",
-    "@ng-select/ng-select": "~3.7.3",
-    "@ngx-translate/core": "~11.0.1",
-    "@ngx-translate/http-loader": "~4.0.0",
+    "@angular/animations": "~11.2.11",
+    "@angular/common": "~11.2.11",
+    "@angular/compiler": "~11.2.11",
+    "@angular/core": "~11.2.11",
+    "@angular/forms": "~11.2.11",
+    "@angular/platform-browser": "~11.2.11",
+    "@angular/platform-browser-dynamic": "~11.2.11",
+    "@angular/router": "~11.2.11",
+    "@ng-select/ng-select": "~6.1.0",
+    "@ngx-translate/core": "~13.0.0",
+    "@ngx-translate/http-loader": "~6.0.0",
     "@sebgroup/ng-magic-iframe": "~1.0.2",
-    "@types/jest": "~25.2.3",
-    "aws-sdk": "~2.784.0",
-    "bootstrap": "~4.5.0",
+    "@types/jest": "~26.0.23",
+    "aws-sdk": "~2.893.0",
+    "bootstrap": "~4.6.0",
     "chdir": "0.0.0",
     "copy-dir": "~1.3.0",
-    "crypto-js": "~3.3.0",
+    "crypto-js": "~4.0.0",
     "electron-default-menu": "~1.0.2",
-    "electron-is-dev": "^0.3.0",
-    "electron-log": "~3.0.6",
-    "electron-notarize": "~0.1.1",
-    "electron-osx-sign": "~0.4.17",
+    "electron-is-dev": "^2.0.0",
+    "electron-log": "~4.3.4",
+    "electron-notarize": "~1.0.0",
+    "electron-osx-sign": "~0.5.0",
     "electron-reload": "~1.5.0",
-    "electron-updater": "^4.3.5",
-    "extract-zip": "~1.7.0",
+    "electron-updater": "^4.3.8",
+    "extract-zip": "~2.0.1",
     "fix-path": "~3.0.0",
-    "follow-redirects": "1.13.0",
-    "fs-extra": "~8.1.0",
-    "github-url-to-object": "^4.0.4",
+    "follow-redirects": "1.14.0",
+    "fs-extra": "~9.1.0",
+    "github-url-to-object": "^4.0.6",
     "global-tunnel": "~1.2.0",
-    "http-proxy-agent": "2.1.0",
-    "https-proxy-agent": "2.2.4",
-    "ini": "~1.3.5",
+    "http-proxy-agent": "4.0.1",
+    "https-proxy-agent": "5.0.0",
+    "ini": "~2.0.0",
     "is-url": "^1.2.4",
-    "jwt-decode": "~2.2.0",
-    "keytar": "~7.3.0",
-    "md5-file": "~4.0.0",
-    "menubar": "~6.0.3",
+    "jwt-decode": "~3.1.2",
+    "keytar": "~7.7.0",
+    "md5-file": "~5.0.0",
+    "menubar": "~9.0.3",
     "mousetrap": "~1.6.5",
-    "ms": "^2.1.1",
-    "ngx-bootstrap": "4.3.0",
+    "ms": "^2.1.3",
+    "ngx-bootstrap": "6.2.0",
     "ngx-electron": "^2.2.0",
     "ngx-infinite-scroll": "^10.0.1",
-    "ngx-json-viewer": "~2.4.0",
-    "ngx-toastr": "~10.0.4",
+    "ngx-json-viewer": "~3.0.2",
+    "ngx-toastr": "~13.2.1",
     "node-log-rotate": "~0.1.5",
     "node-machine-id": "~1.1.12",
     "rimraf": "~3.0.2",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.6.7",
     "saml-encoder-decoder-js": "~1.0.1",
-    "semver": "~6.3.0",
+    "semver": "~7.3.5",
     "sudo-prompt": "~9.2.1",
-    "tslib": "~1.13.0",
+    "tslib": "~2.2.0",
     "update-electron-app": "~2.0.1",
-    "uuid": "~8.3.0",
-    "v8-compile-cache": "~2.1.1",
+    "uuid": "~8.3.2",
+    "v8-compile-cache": "~2.3.0",
     "zlib": "~1.0.5",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.10",
     "@angular/cli": "^11.2.10",
-    "@angular/compiler-cli": "^11.0.0",
-    "@angular/language-service": "~8.1.0",
-    "@biesbjerg/ngx-translate-extract": "~2.3.4",
+    "@angular/compiler-cli": "^11.2.11",
+    "@angular/language-service": "~11.2.11",
+    "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@types/aws-sdk": "^2.7.0",
     "@types/jasmine": "^3.6.10",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.17.51",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^15.0.1",
     "@types/uuid": "^8.3.0",
-    "codelyzer": "~5.2.2",
-    "electron": "11.2.0",
-    "electron-builder": "~22.9.1",
-    "electron-builder-squirrel-windows": "~21.1.3",
+    "codelyzer": "~6.0.1",
+    "electron": "12.0.5",
+    "electron-builder": "~22.10.5",
+    "electron-builder-squirrel-windows": "~22.10.5",
     "electron-installer-dmg": "~3.0.0",
-    "electron-packager": "~15.1.0",
-    "electron-rebuild": "~2.0.3",
+    "electron-packager": "~15.2.0",
+    "electron-rebuild": "~2.3.5",
     "jasmine": "^3.7.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.3.2",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-firefox-launcher": "^2.1.0",
-    "karma-jasmine": "~2.0.1",
+    "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.5.4",
     "karma-requirejs": "^1.1.0",
-    "node-abi": "^2.19.3",
+    "node-abi": "^2.26.0",
     "nyc": "^15.1.0",
-    "protractor": "~5.4.4",
-    "ts-node": "^7.0.1",
-    "tslint": "~5.15.0",
-    "typescript": "^3.4.5"
+    "protractor": "^7.0.0",
+    "ts-node": "^9.1.1",
+    "tslint": "~5.20.1",
+    "typescript": "~4.1.5"
   }
 }
