--- a/package.json
+++ b/package.json
@@ -123,8 +123,7 @@
     },
     "win": {
       "target": [
-        "nsis",
-        "zip"
+        "nsis"
       ],
       "icon": "src/assets/images/Leapp.ico",
       "legalTrademarks": "beSharp",
@@ -200,7 +199,6 @@
     "ms": "^2.1.1",
     "ngx-bootstrap": "4.3.0",
     "ngx-electron": "^2.2.0",
-    "ngx-infinite-scroll": "^10.0.1",
     "ngx-json-viewer": "~2.4.0",
     "ngx-toastr": "~10.0.4",
     "node-log-rotate": "~0.1.5",
@@ -229,7 +227,7 @@
     "@types/node": "^10.17.51",
     "@types/uuid": "^8.3.0",
     "codelyzer": "~5.2.2",
-    "electron": "11.2.0",
+    "electron": "10.3.0",
     "electron-builder": "~22.9.1",
     "electron-builder-squirrel-windows": "~21.1.3",
     "electron-installer-dmg": "~3.0.0",
