--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "aws-sdk": "~2.893.0",
     "bootstrap": "~4.6.0",
     "chdir": "0.0.0",
+    "class-transformer": "^0.4.0",
     "copy-dir": "~1.3.0",
     "crypto-js": "~4.0.0",
     "electron-default-menu": "~1.0.2",
@@ -205,6 +206,7 @@
     "ngx-toastr": "~13.2.1",
     "node-log-rotate": "~0.1.5",
     "node-machine-id": "~1.1.12",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "~3.0.2",
     "rxjs": "~6.6.7",
     "saml-encoder-decoder-js": "~1.0.1",
