--- a/package.json
+++ b/package.json
@@ -252,6 +252,6 @@
     "protractor": "^7.0.0",
     "ts-node": "^9.1.1",
     "tslint": "~5.20.1",
-    "typescript": "^4.1.5"
+    "typescript": "4.1.5"
   }
 }
