--- a/package.json
+++ b/package.json
@@ -180,6 +180,7 @@
     "aws-sdk": "~2.784.0",
     "bootstrap": "~4.5.0",
     "chdir": "0.0.0",
+    "compare-versions": "^3.6.0",
     "copy-dir": "~1.3.0",
     "crypto-js": "~3.3.0",
     "electron-default-menu": "~1.0.2",
@@ -232,7 +233,7 @@
     "@commitlint/cli": "12.0.1",
     "@commitlint/config-conventional": "12.0.1",
     "@types/aws-sdk": "^2.7.0",
-    "@types/jasmine": "~3.5.11",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^10.17.51",
     "@types/uuid": "^8.3.0",
