chore: migrated from tslint to eslint

--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "analytics": false
+    "analytics": "a9497ed5-4b2f-482f-8e51-1f9817d1bec2",
+    "defaultCollection": "@angular-eslint/schematics"
   },
   "version": 1,
   "newProjectRoot": "projects",
@@ -120,15 +121,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
             ]
           }
         },
@@ -150,8 +147,5 @@
       }
     }
   },
-  "defaultProject": "leapp-client",
-  "cli": {
-    "analytics": "a9497ed5-4b2f-482f-8e51-1f9817d1bec2"
-  }
+  "defaultProject": "leapp-client"
 }
