--- a/package.json
+++ b/package.json
@@ -221,6 +221,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.10",
+    "@angular-eslint/builder": "4.2.0",
+    "@angular-eslint/eslint-plugin": "4.2.0",
+    "@angular-eslint/eslint-plugin-template": "4.2.0",
+    "@angular-eslint/schematics": "4.2.0",
+    "@angular-eslint/template-parser": "4.2.0",
     "@angular/cli": "^11.2.10",
     "@angular/compiler-cli": "^11.2.11",
     "@angular/language-service": "~11.2.11",
@@ -230,13 +235,18 @@
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^15.0.1",
     "@types/uuid": "^8.3.0",
-    "codelyzer": "~6.0.1",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
     "electron": "12.0.5",
     "electron-builder": "~22.10.5",
     "electron-builder-squirrel-windows": "~22.10.5",
     "electron-installer-dmg": "~3.0.0",
     "electron-packager": "~15.2.0",
     "electron-rebuild": "~2.3.5",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
     "jasmine": "^3.7.0",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~7.0.0",
@@ -251,7 +261,9 @@
     "nyc": "^15.1.0",
     "protractor": "^7.0.0",
     "ts-node": "^9.1.1",
-    "tslint": "~5.20.1",
     "typescript": "4.1.5"
+  },
+  "browser": {
+    "crypto": false
   }
 }
