--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -2,16 +2,16 @@
   "compileOnSave": true,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist",
-    "sourceMap": true,
     "declaration": false,
-    "module": "commonjs",
-    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "lib": ["es2018", "dom"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "sourceMap": true,
     "target": "es5",
-    "types": ["node"],
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"]
+    "types": ["node"]
   }
 }
