--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "name": "besharp",
     "email": "info@besharp.it"
   },
-  "description": "Straight programmatic access via Single Sign-on to all your AWS accounts and resources.",
+  "description": "Leapp is a Cross-Platform Cloud access App, built on top of Electron.",
   "contributors": [
     {
       "name": "Alessandro Gaggia",
@@ -74,18 +74,18 @@
     "productName": "Leapp",
     "icon": "src/assets/icons/icon.icns",
     "files": [
-      "dist/leapp-client/*",
-      "dist/leapp-client/**/*",
-      "node_modules/**/*",
-      "package.json",
-      "electron/dist/*",
-      "electron/dist/**/*",
+      "dist/assets/images/Leapp.icns",
+      "dist/assets/images/Leapp.ico",
+      "dist/assets/images/Leapp.png",
       "dist/icon.icns",
       "dist/icon.ico",
       "dist/icon.png",
-      "dist/assets/images/Leapp.icns",
-      "dist/assets/images/Leapp.ico",
-      "dist/assets/images/Leapp.png"
+      "dist/leapp-client/*",
+      "dist/leapp-client/**/*",
+      "electron/dist/*",
+      "electron/dist/**/*",
+      "node_modules/**/*",
+      "package.json"
     ],
     "directories": {
       "output": "release",
@@ -121,18 +121,6 @@
         "AppImage"
       ]
     },
-    "win": {
-      "target": [
-        "nsis",
-        "zip"
-      ],
-      "icon": "src/assets/images/Leapp.ico",
-      "legalTrademarks": "beSharp",
-      "publisherName": "beSharp",
-      "requestedExecutionLevel": "highestAvailable",
-      "verifyUpdateCodeSignature": false,
-      "certificateFile": "windows_sign_certificate.pfx"
-    },
     "mac": {
       "icon": "src/assets/images/Leapp.icns",
       "forceCodeSigning": true,
@@ -154,6 +142,18 @@
           ]
         }
       ]
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "zip"
+      ],
+      "icon": "src/assets/images/Leapp.ico",
+      "legalTrademarks": "beSharp",
+      "publisherName": "beSharp",
+      "requestedExecutionLevel": "highestAvailable",
+      "verifyUpdateCodeSignature": false,
+      "certificateFile": "windows_sign_certificate.pfx"
     }
   },
   "dependencies": {
