--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,11 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
-    "types": ["node"],
-    "resolveJsonModule": true,
     "esModuleInterop": true,
-    "typeRoots": [ "../node_modules/@types" ]
+    "resolveJsonModule": true,
+    "types": ["node"]
   },
   "include": [
     "src/**/*.ts"
