--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,6 +10,9 @@
   ],
   "exclude": [
     "src/test.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "src/base-injectables.ts",
+    "src/environments/environment.prod.ts",
+    "src/environments/environment.stag.ts"
   ]
 }
