--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,11 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es2018", "dom"],
-    "module": "es2015",
+    "lib": ["ES2018", "DOM"],
+    "module": "ES6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "target": "es2015",
+    "target": "ES6",
     "typeRoots": ["../node_modules/@types"]
   },
   "angularCompilerOptions": {
