--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "bootstrap": "~4.6.0",
     "chdir": "0.0.0",
     "class-transformer": "^0.4.0",
+    "compare-versions": "^3.6.0",
     "copy-dir": "~1.3.0",
     "crypto-js": "~4.0.0",
     "electron-default-menu": "~1.0.2",
