reverted keytar to 0.5.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Leapp",
-  "version": "0.5.7",
+  "version": "0.5.0",
   "author": {
     "name": "besharp",
     "email": "info@besharp.it"
@@ -197,7 +197,7 @@
     "ini": "~2.0.0",
     "is-url": "^1.2.4",
     "jwt-decode": "~3.1.2",
-    "keytar": "~7.7.0",
+    "keytar": "7.6.0",
     "md5-file": "~5.0.0",
     "menubar": "~9.0.3",
     "mousetrap": "~1.6.5",
