docs: overview docs refactored, fixed IAM User use-case video

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,6 @@ theme:
   name: material
   features:
     - navigation.instant
-    - navigation.tabs
     - navigation.indexes
     - navigation.sections
     - navigation.top
@@ -64,8 +63,13 @@ theme:
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
+
 plugins:
   - search
+  - mkdocs-video
+
+extra_css:
+  - stylesheets/extra.css
 
 markdown_extensions:
   - pymdownx.emoji:
